#
# TODO Could split out only those source files needed to support each test. See
# golay test for example.

incdirUT = include_directories(
    '../include/',
#    '../third_party/viterbi'
)
   
#unit_test_mpduUtility = executable('unit_test-mpduUtility', 'qa_mpduUtility.cpp', core_source_files, third_party_source_files,
#    include_directories : incdirUT,
#    dependencies: [gtest_dep]
#    )
#    
#test('mpduUtility', unit_test_mpduUtility,
#    timeout: 2
#    )
    